--- a/Unibo-Template-main/src/Template.Web/Template.Web.csproj
+++ b/Unibo-Template-main/src/Template.Web/Template.Web.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.14" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="PublicHoliday" Version="2.34.0" />
     <PackageReference Include="R4Mvc" Version="1.0.0-alpha2-00395" />
     <PackageReference Include="R4Mvc.Tools-alphavaleriob" Version="1.0.0-alphavaleriob-00395">
       <PrivateAssets>all</PrivateAssets>
