--- a/Unibo-Template-main/src/Template.Web/Template.Web.csproj
+++ b/Unibo-Template-main/src/Template.Web/Template.Web.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Areas\Example\**" />
+    <Content Remove="Areas\Example\**" />
+    <EmbeddedResource Remove="Areas\Example\**" />
+    <None Remove="Areas\Example\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.14" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
@@ -18,24 +25,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Template\Template.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Areas\Example\Users\EditViewModel.cs">
-      <Generator>DtsGenerator</Generator>
-      <LastGenOutput>EditViewModel.cs.d.ts</LastGenOutput>
-    </Compile>
-    <Compile Update="Areas\Example\Users\IndexViewModel.cs">
-      <Generator></Generator>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Areas\Example\Users\EditViewModel.cs.d.ts">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>EditViewModel.cs</DependentUpon>
-    </None>
   </ItemGroup>
 
 </Project>
