--- a/Unibo-Template-main/src/Template.Web/Template.Web.csproj
+++ b/Unibo-Template-main/src/Template.Web/Template.Web.csproj
@@ -12,6 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\images\app-logo.png" />
+    <Content Remove="wwwroot\images\company-logo.png" />
+    <Content Remove="wwwroot\images\red-request.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.14" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
